--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 
 <body>
     <h1>hi, i'm tam.</h1>
-    <p>welcome to my portfolio</p>
+    <h2>site currently under construction,
+        </br>come back soon<h2>
+    <!-- <p>welcome to my portfolio</p>
     <p>games | programmer | designer</p>
     <p>some of my projects:
         <ul>
@@ -17,7 +19,7 @@
             <li><a href="">luxo's horde</a></li>
         </ul>
 
-    </p>
+    </p> -->
 </body>
 
 </html>
